--- a/.wing/settings.json
+++ b/.wing/settings.json
@@ -4,5 +4,6 @@
 		"**/bin-release": true
 	}
 ,
-"typescript.tsdk": "./node_modules/typescript/lib"
+"typescript.tsdk": "./node_modules/typescript/lib",
+"eslint.enable": false
 }
