--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "devDependencies": {
     "tslint": "^4.0.2",
     "typescript": "^2.1.5"
+  },
+  "dependencies": {
+    "express": "^4.15.2"
   }
 }
