--- a/api/config.json
+++ b/api/config.json
@@ -9,7 +9,8 @@
       "sceneChangeTime": 20,
       "bgColor": "#f2f2f2",
       "bgImage": "/assets/images/bg/bg.jpg",
-      "autoResetTime": 15
+      "autoResetTime": 15,
+      "showDetailAnimationTime": 2300
     }
   }
 }
